Models move around and can sit when right clicked by owner

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,3 +1,3 @@
 {
-  "item.tutorialmod.mudman_spawn_egg": "Mudman Spawn Egg"
+  "item.tutorialmod.mudman_spawn_egg": "Mudman Spawn Egg", "item.tutorialmod.toydog_spawn_egg": "Toydog Spawn Egg"
 }
