--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,3 +1,9 @@
 {
-  "item.tutorialmod.mudman_spawn_egg": "Mudman Spawn Egg", "item.tutorialmod.toydog_spawn_egg": "Toydog Spawn Egg"
+  "entity.tutorialmod.toydog": "Toy Dog",
+  "entity.tutorialmod.mudman": "Mudman",
+  "item.tutorialmod.gold_heart": "Heart o' Gold",
+  "item.tutorialmod.toydog_figure_item": "Wooden Pet",
+  "item.tutorialmod.toydog_figure": "Wooden Pet",
+  "item.tutorialmod.mudman_spawn_egg": "Mudman Spawn Egg",
+  "item.tutorialmod.toydog_spawn_egg": "Toydog Spawn Egg"
 }
