Toy Dog is full working and ready for use. TODO: Fix the hit box size and head angle. Consider adding a redstone and amethyst shard interaction.

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -3,7 +3,7 @@
   "entity.tutorialmod.mudman": "Mudman",
   "item.tutorialmod.gold_heart": "Heart o' Gold",
   "item.tutorialmod.toydog_figure_item": "Wooden Pet",
-  "item.tutorialmod.toydog_figure": "Wooden Pet",
+  "block.tutorialmod.toydog_figure": "Wooden Pet",
   "item.tutorialmod.mudman_spawn_egg": "Mudman Spawn Egg",
   "item.tutorialmod.toydog_spawn_egg": "Toydog Spawn Egg"
 }
